r308: Fixed separator alignment in Opera

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ div.dokuwiki div.refnotes {
 }
 
 div.dokuwiki div.refnotes hr {
+    text-align: left;
     margin-bottom: 0.2em;
 }
 
